4.4.5: Manager API – /freeHands
