# api/manager.v1.swagger.yml
@@ -21,6 +21,20 @@ paths:
               schema:
                 $ref: "#/components/schemas/GetFreeHandsBtnAvailabilityResponse"
 
+  /freeHands:
+    post:
+      description: Add manager to free managers pool.
+      parameters:
+          - $ref: "#/components/parameters/XRequestIDHeader"
+      responses:
+        '200':
+          description: Manager availability.
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/FreeHandsResponse"
+
+
 security:
   - bearerAuth: [ ]
 
@@ -59,6 +73,10 @@ components:
     ErrorCode:
       type: integer
       description: contains HTTP error codes and specific business logic error codes (the last must be >= 1000).
+      enum:
+        - 5000
+      x-enum-varnames:
+        - ErrorCodeFreeHandsManagerOverloadError
       minimum: 400
 
     GetFreeHandsBtnAvailabilityResponse:
@@ -68,9 +86,16 @@ components:
         error:
           $ref: "#/components/schemas/Error"
 
+    FreeHandsResponse:
+      properties:
+        data:
+          type: object
+          nullable: true
+        error:
+          $ref: "#/components/schemas/Error"
+
     ManagerAvailability:
       required: [ available ]
       properties:
         available:
           type: boolean
-
